"Renamed 'role-has-permission' routes to 'rhp' and updated corresponding views and controllers."

--- a/src/resource/views/dashboard/roleAndPermission/roleHasPermissions/create.ejs
+++ b/src/resource/views/dashboard/roleAndPermission/roleHasPermissions/create.ejs
@@ -4,7 +4,7 @@
       <h6 class="mb-0">New Role and Permission</h6>
       <p class="text-sm mb-0">Create new Role and Permission</p>
       <hr class="horizontal dark my-3">
-      <form action="/role-has-permission/add" method="POST">
+      <form action="/rhp/add" method="POST">
         <label class="form-label ">Role Name</label>
         <select class="form-control choices-multiple-remove-button" name="roleId" id="roleId" required>
           <% roles.forEach(role => { %>
