--- a/src/resource/views/components/dashboard/head.ejs
+++ b/src/resource/views/components/dashboard/head.ejs
@@ -26,6 +26,7 @@
   <link href="/public/assets/css/nucleo-svg.css" rel="stylesheet" />
 
   <script src="https://kit.fontawesome.com/42d5adcbca.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="/public/assets/css/nucleo-svg.css" rel="stylesheet" />
 
   <link id="pagestyle" href="/public/assets/css/soft-ui-dashboard.min%EF%B9%96v=1.1.1.css" rel="stylesheet" />
